--- a/electronica/capacitor.html
+++ b/electronica/capacitor.html
@@ -43,10 +43,49 @@
                 <div class="blog-image">
                     <img src="media/capacitor1.png" alt="">
                 </div>
+                <h2>Características</h2>
+                <p>Aquí están algunas consideraciones clave para calcular un capacitor:</p>
+                <p><marcador class="resaltado8">Tensión nominal (V):</marcador> Es la máxima tensión que el capacitor puede soportar sin sufrir daños o ruptura. Asegúrate de que la tensión nominal del capacitor sea mayor o igual que la tensión máxima en tu circuito.</p>
+                <p><marcador class="resaltado8">Frecuencia de operación:</marcador> En algunos casos, especialmente cuando se trabaja con señales de alta frecuencia, es importante tener en cuenta la frecuencia de operación para seleccionar un capacitor adecuado. Algunos capacitores están diseñados para trabajar mejor en ciertos rangos de frecuencia.</p>
+                <p><marcador class="resaltado8">Tolerancia:</marcador> Al igual que otros componentes electrónicos, los capacitores tienen una tolerancia que indica el rango permitido de variación en su valor nominal. Por ejemplo, si un capacitor tiene una tolerancia del 10%, su valor real podría ser hasta un 10% más alto o más bajo que el valor nominal especificado.</p>
+                <div class="blog-image">
+                    <img src="media/capacitor3.jpg" alt="">
+                </div>
+                <h2>Aplicaciones</h2>
+                <p>Los capacitores tienen una amplia gama de aplicaciones en la electrónica y otras áreas. Algunos usos comunes incluyen:</p>
+                <ul>
+                    <li><marcador class="resaltado8">Filtrado y acoplamiento:</marcador> Los capacitores se utilizan en circuitos electrónicos para filtrar frecuencias no deseadas y acoplar señales entre diferentes etapas de un circuito.</li>
+                    <li><marcador class="resaltado8">Arranque de motores:</marcador> En sistemas eléctricos, los capacitores de arranque se utilizan para proporcionar un impulso inicial a los motores eléctricos.</li>
+                    <li><marcador class="resaltado8">Fuentes de energía:</marcador> Los capacitores se utilizan en fuentes de energía ininterrumpida (UPS) para almacenar energía y liberarla cuando se produce una interrupción del suministro eléctrico</li>
+                    <li><marcador class="resaltado8">Electrónica de consumo:</marcador> Se encuentran en dispositivos electrónicos comunes, como televisores, radios, cámaras y teléfonos móviles.</li>
+                    <li><marcador class="resaltado8">Almacenamiento de energía:</marcador> En la investigación de energía renovable y sistemas de distribución eléctrica inteligente, los capacitores se utilizan para almacenar energía y equilibrar las cargas de la red.</li>
+                </ul>
+                <div class="blog-image">
+                    <img src="media/capacitor2.jpg" alt="">
+                </div>                
+                <h2>Tipos de capacitores</h2>
+                <p>Existen varios tipos de capacitores, cada uno con características y aplicaciones específicas. A continuación, se presentan algunos de los tipos más comunes:</p>
+                <ul>
+                    <li><marcador class="resaltado8">Capacitor de cerámica:</marcador> Son pequeños y económicos. Se utilizan en aplicaciones de alta frecuencia, acoplamientos y desacoplamientos de señales, filtrado y circuitos integrados.</li>
+                    <li><marcador class="resaltado8">Capacitor electrolítico de aluminio:</marcador> Tienen una alta capacidad de almacenamiento y se usan en aplicaciones de baja frecuencia, como fuentes de alimentación y acoplamientos de audio.</li>
+                    <li><marcador class="resaltado8">Capacitor electrolítico de tantalio:</marcador> Similar al de aluminio, pero ofrece una mayor estabilidad y precisión. Se utiliza en aplicaciones donde se requiere una mayor fiabilidad y donde el tamaño es un factor crítico.</li>
+                    <li><marcador class="resaltado8">Capacitor de poliéster:</marcador> Adecuados para aplicaciones de alta frecuencia y filtrado.</li>
+                    <li><marcador class="resaltado8">Capacitor de polipropileno:</marcador> Ofrecen una alta precisión y estabilidad, utilizados en aplicaciones de alta calidad, como en filtros de audio y crossovers de altavoces.</li>
+                    <li><marcador class="resaltado8">Capacitor de película de poliéster metalizado:</marcador> Son utilizados en aplicaciones de alta frecuencia y aplicaciones de corriente alterna.</li>
+                    <li><marcador class="resaltado8">Capacitor de película de polipropileno metalizado:</marcador> Ofrecen una alta precisión y baja pérdida, utilizados en aplicaciones de filtrado y alta frecuencia.</li>
+                    <li><marcador class="resaltado8">Capacitor de tantalio de estado sólido:</marcador> Son más pequeños y confiables que los electrolíticos de tantalio. Se utilizan en aplicaciones de alta densidad y donde se requiere una alta fiabilidad.</li>
+                    <li><marcador class="resaltado8">Supercondensadores:</marcador> Tienen una capacitancia mucho mayor que los capacitores convencionales y se utilizan en aplicaciones de almacenamiento de energía, como en vehículos eléctricos y sistemas de recuperación de energía.</li>
+                    <li><marcador class="resaltado8">Capacitor de montaje superficial (SMD):</marcador> Son diseñados para soldarse directamente a las placas de circuito impreso, lo que permite una mayor densidad de componentes y una facilidad de montaje automatizado.</li>
+                    <li><marcador class="resaltado8">Capacitores variables:</marcador> Permiten ajustar manual o electrónicamente su capacitancia y se utilizan en aplicaciones como sintonización de radios y en osciladores controlados.</li>
+                </ul>
+                <div class="blog-image-grande">
+                    <img src="media/capacitor4.jpg" alt="">
+                </div>
                 <h2>Cálculo</h2>
                 <p>La capacidad de almacenamiento de un capacitor se mide en términos de su capacitancia, que se representa con la letra "C" y se mide en faradios (F). Un faradio es una cantidad extremadamente grande para la mayoría de aplicaciones prácticas, por lo que los capacitores comunes se expresan en microfaradios (µF), nanofaradios (nF) o picofaradios (pF).</p>
                 <br>
-                <p>Capacitancia (C): La capacitancia se mide en faradios (F) y representa la cantidad de carga eléctrica que un capacitor puede almacenar por unidad de tensión. Para calcular la capacitancia, usa la siguiente fórmula:</p>
+                <p><marcador class="resaltado8">Capacitancia (C):</marcador> La capacitancia se mide en faradios (F) y representa la cantidad de carga eléctrica que un capacitor puede almacenar por unidad de tensión. Para calcular la capacitancia, usa la siguiente fórmula:</p>
+                <br>
                 <center>
                     <p>C = Q / V</p>
                     <p>Donde:</p>
@@ -55,46 +94,11 @@
                     <p>     V = Tensión entre las placas del capacitor en voltios (V)</p>
                 </center>
                 <br>
-                <p>Ejemplo de cálculo de capacitancia: Si tienes un capacitor que almacena una carga de 10 coulombs y la tensión entre sus placas es de 5 voltios, la capacitancia sería:</p>
-                <p>C = 10 C / 5 V = 2 F (2 faradios)</p>
-                <h2>Características</h2>
-                <p>Aquí están algunas consideraciones clave para calcular un capacitor:</p>
-                <p>Tensión nominal (V): Es la máxima tensión que el capacitor puede soportar sin sufrir daños o ruptura. Asegúrate de que la tensión nominal del capacitor sea mayor o igual que la tensión máxima en tu circuito.</p>
-                <p>Frecuencia de operación: En algunos casos, especialmente cuando se trabaja con señales de alta frecuencia, es importante tener en cuenta la frecuencia de operación para seleccionar un capacitor adecuado. Algunos capacitores están diseñados para trabajar mejor en ciertos rangos de frecuencia.</p>
-                <p>Tolerancia: Al igual que otros componentes electrónicos, los capacitores tienen una tolerancia que indica el rango permitido de variación en su valor nominal. Por ejemplo, si un capacitor tiene una tolerancia del 10%, su valor real podría ser hasta un 10% más alto o más bajo que el valor nominal especificado.</p>
-                <div class="blog-image">
-                    <img src="media/capacitor3.jpg" alt="">
-                </div>
-                <h2>Aplicaciones</h2>
-                <p>Los capacitores tienen una amplia gama de aplicaciones en la electrónica y otras áreas. Algunos usos comunes incluyen:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Filtrado y acoplamiento: Los capacitores se utilizan en circuitos electrónicos para filtrar frecuencias no deseadas y acoplar señales entre diferentes etapas de un circuito.</li>
-                    <li>Arranque de motores: En sistemas eléctricos, los capacitores de arranque se utilizan para proporcionar un impulso inicial a los motores eléctricos.</li>
-                    <li>Fuentes de energía: Los capacitores se utilizan en fuentes de energía ininterrumpida (UPS) para almacenar energía y liberarla cuando se produce una interrupción del suministro eléctrico</li>
-                    <li>Electrónica de consumo: Se encuentran en dispositivos electrónicos comunes, como televisores, radios, cámaras y teléfonos móviles.</li>
-                    <li>Almacenamiento de energía: En la investigación de energía renovable y sistemas de distribución eléctrica inteligente, los capacitores se utilizan para almacenar energía y equilibrar las cargas de la red.</li>
-                </ul>
-                <div class="blog-image">
-                    <img src="media/capacitor2.jpg" alt="">
-                </div>                
-                <h2>Tipos de capacitores</h2>
-                <p>Existen varios tipos de capacitores, cada uno con características y aplicaciones específicas. A continuación, se presentan algunos de los tipos más comunes:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Capacitor de cerámica: Son pequeños y económicos. Se utilizan en aplicaciones de alta frecuencia, acoplamientos y desacoplamientos de señales, filtrado y circuitos integrados.</li>
-                    <li>Capacitor electrolítico de aluminio: Tienen una alta capacidad de almacenamiento y se usan en aplicaciones de baja frecuencia, como fuentes de alimentación y acoplamientos de audio.</li>
-                    <li>Capacitor electrolítico de tantalio: Similar al de aluminio, pero ofrece una mayor estabilidad y precisión. Se utiliza en aplicaciones donde se requiere una mayor fiabilidad y donde el tamaño es un factor crítico.</li>
-                    <li>Capacitor de poliéster: Adecuados para aplicaciones de alta frecuencia y filtrado.</li>
-                    <li>Capacitor de polipropileno: Ofrecen una alta precisión y estabilidad, utilizados en aplicaciones de alta calidad, como en filtros de audio y crossovers de altavoces.</li>
-                    <li>Capacitor de película de poliéster metalizado: Son utilizados en aplicaciones de alta frecuencia y aplicaciones de corriente alterna.</li>
-                    <li>Capacitor de película de polipropileno metalizado: Ofrecen una alta precisión y baja pérdida, utilizados en aplicaciones de filtrado y alta frecuencia.</li>
-                    <li>Capacitor de tantalio de estado sólido: Son más pequeños y confiables que los electrolíticos de tantalio. Se utilizan en aplicaciones de alta densidad y donde se requiere una alta fiabilidad.</li>
-                    <li>Supercondensadores: Tienen una capacitancia mucho mayor que los capacitores convencionales y se utilizan en aplicaciones de almacenamiento de energía, como en vehículos eléctricos y sistemas de recuperación de energía.</li>
-                    <li>Capacitor de montaje superficial (SMD): Son diseñados para soldarse directamente a las placas de circuito impreso, lo que permite una mayor densidad de componentes y una facilidad de montaje automatizado.</li>
-                    <li>Capacitores variables: Permiten ajustar manual o electrónicamente su capacitancia y se utilizan en aplicaciones como sintonización de radios y en osciladores controlados.</li>
-                </ul>
-                <div class="blog-image-grande">
-                    <img src="media/capacitor4.jpg" alt="">
-                </div>
+                <h5>Ejemplo de cálculo de capacitancia:</h5>
+                <p>Si tienes un capacitor que almacena una carga de 10 coulombs y la tensión entre sus placas es de 5 voltios, la capacitancia sería:</p>
+                <p><marcador class="resaltado7">C = 10 C / 5 V = 2 F (2 faradios)</marcador></p>
+                <br>
+                <br>
             </div>   
     </main>
     <script src="../js/script.js"></script>
