--- a/electronica/inductancia.html
+++ b/electronica/inductancia.html
@@ -43,18 +43,53 @@
                 <p>Ahora bien, cuando se detiene el flujo de corriente o se interrumpe el suministro eléctrico, el campo magnético colapsa, liberando la energía magnética almacenada en forma de corriente eléctrica. Este fenómeno se rige por la Ley de Faraday, que establece que un cambio en el flujo de campo magnético a través de una bobina inducirá una fuerza electromotriz (fem) y generará una corriente eléctrica en sentido contrario a la corriente original.</p>
                 <p>El inductor almacena energía magnética cuando se le suministra corriente eléctrica y luego libera esa energía en forma de corriente eléctrica cuando la corriente se detiene o cambia. Es por esto que se considera un componente de almacenamiento de energía y juega un papel importante en diversas aplicaciones, como en fuentes de alimentación, transformadores y sistemas de almacenamiento de energía. Sin embargo, es importante tener en cuenta que la energía magnética almacenada en un inductor proviene de la fuente de alimentación externa y no del propio inductor en sí.</p>
                 <p>Este comportamiento se rige por 2 leyes que son fundamentales en el funcionamiento de inductores y son esenciales en la comprensión de fenómenos electromagnéticos en la electrónica y la electricidad.</p>
-                <p>Ley de Faraday: Esta ley establece que cuando hay un cambio en el flujo de campo magnético a través de una bobina o inductor, se inducirá una fuerza electromotriz (fem) en la bobina. En otras palabras, si aumenta o disminuye el campo magnético que atraviesa el inductor, se generará una corriente eléctrica en la bobina.</p>
+                <p><marcador class="resaltado2">Ley de Faraday:</marcador> Esta ley establece que cuando hay un cambio en el flujo de campo magnético a través de una bobina o inductor, se inducirá una fuerza electromotriz (fem) en la bobina. En otras palabras, si aumenta o disminuye el campo magnético que atraviesa el inductor, se generará una corriente eléctrica en la bobina.</p>
                 <p>Imagina que tienes un imán y una bobina de alambre cerca uno del otro. Si mueves el imán hacia la bobina o lejos de ella, estarás cambiando el flujo del campo magnético que pasa a través de la bobina. Este cambio en el flujo magnético inducirá una corriente eléctrica en la bobina.</p>
-                <p>Ley de Lenz: Esta ley complementa la Ley de Faraday y establece que la corriente inducida en un inductor siempre actuará en una dirección que se opone al cambio del flujo magnético. En otras palabras, la corriente inducida en el inductor crea su propio campo magnético que se opone al cambio en el campo magnético que lo está induciendo.</p>
+                <p><marcador class="resaltado2">Ley de Lenz:</marcador> Esta ley complementa la Ley de Faraday y establece que la corriente inducida en un inductor siempre actuará en una dirección que se opone al cambio del flujo magnético. En otras palabras, la corriente inducida en el inductor crea su propio campo magnético que se opone al cambio en el campo magnético que lo está induciendo.</p>
                 <p>Volviendo al ejemplo del imán y la bobina, si mueves el imán hacia la bobina, la corriente inducida en la bobina fluirá en una dirección que genera un campo magnético que intentará frenar o detener el cambio del flujo magnético. Si mueves el imán lejos de la bobina, la corriente inducida fluirá en una dirección opuesta para intentar mantener el flujo magnético.</p>
                 <p>La Ley de Faraday nos dice que un cambio en el flujo magnético induce una corriente eléctrica en un inductor, y la Ley de Lenz nos dice que esta corriente siempre se opondrá al cambio que la está induciendo. </p>
                 <p>Por lo que, a medida que el campo magnético crezca, existirá una resistencia al cambio, pero una vez que alcance su fuerza máxima, esa resistencia desaparecerá y comenzará a comportarse como un simple cable. Pero al cortar la corriente, el inductor sufrirá un cambio al perder fuerza en su campo magnético. La corriente cambiará su dirección al disminuir, en vez de incrementar, y se generará una corriente inducida por el campo magnético. Por lo cual, se dice que el inductor tiene la capacidad de almacenar energía temporalmente en forma de campo magnético.</p>
                 <div class="blog-image-grande">
                     <img src="media/inductor1.jpg" alt="">
                 </div>
+                <br>
+                <h2>Características</h2>
+                <ul>
+                    <li><marcador class="resaltado8">Fórmula para inductancia de un inductor con núcleo de hierro o ferrita:</marcador> Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</li>
+                    <li><marcador class="resaltado8">Simulación y software de diseño:</marcador> Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</li>
+                    <li><marcador class="resaltado8">Valores estándar:</marcador> En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</li>
+                </ul>
+                <div class="blog-image-doble">
+                    <img src="media/inductor5.jpg" alt="">
+                    <img src="media/inductor6.jpg" alt="">
+                </div>
+                <h2>Aplicaciones</h2>
+                <p>Los inductores tienen una amplia gama de aplicaciones en la electrónica y otras áreas de la tecnología. Algunos usos comunes incluyen:</p>
+                <ul>
+                    <li><marcador class="resaltado8">Filtrado:</marcador> Se utilizan en circuitos de filtrado para bloquear o atenuar ciertas frecuencias y permitir el paso de otras.</li>
+                    <li><marcador class="resaltado8">Transformadores:</marcador> Los inductores con núcleo de hierro o ferrita se utilizan en transformadores para cambiar la tensión de una señal de corriente alterna.</li>
+                    <li><marcador class="resaltado8">Almacenamiento de Energía:</marcador> Los inductores se utilizan en aplicaciones de almacenamiento de energía, como en convertidores de potencia y sistemas de energía renovable.</li>
+                    <li><marcador class="resaltado8">Cancelación de Ruido:</marcador> Los inductores se emplean en circuitos de cancelación de ruido, especialmente en aplicaciones de audio y comunicaciones.</li>
+                    <li><marcador class="resaltado8">Antenas:</marcador> En la transmisión de señales inalámbricas, los inductores se utilizan en antenas para sintonizar la frecuencia de transmisión.</li>
+                </ul>
+                <div class="blog-image-grande">
+                    <img src="media/inductor3.jpg" alt="">
+                </div>
+                <h2>Tipos de inductores</h2>
+                <p>Los inductores pueden clasificarse en diferentes tipos según su diseño, construcción y aplicaciones específicas. Aquí están algunos de los tipos más comunes de inductores:</p>
+                <ul>
+                    <li><marcador class="resaltado8">Inductor de bobina o solenoide:</marcador> Es el tipo más básico y común de inductor. Consiste en un alambre enrollado alrededor de un núcleo, generalmente de aire. Se utiliza ampliamente en aplicaciones como filtros, acoplamientos y almacenamiento de energía.</li>
+                    <li><marcador class="resaltado8">Inductor de núcleo de hierro:</marcador> En este tipo de inductor, el alambre está enrollado alrededor de un núcleo de hierro. Los inductores de núcleo de hierro ofrecen una mayor inductancia en comparación con los de núcleo de aire, y se utilizan en aplicaciones que requieren una mayor potencia y eficiencia, como transformadores y bobinas de choque.</li>
+                    <li><marcador class="resaltado8">Inductor de núcleo de ferrita:</marcador> Este inductor utiliza un núcleo hecho de material ferromagnético llamado ferrita. Los inductores de núcleo de ferrita se utilizan en aplicaciones de alta frecuencia debido a sus excelentes propiedades magnéticas a altas frecuencias. Son comunes en transformadores de alta frecuencia, fuentes de alimentación conmutadas y dispositivos de radiofrecuencia.</li>
+                    <li><marcador class="resaltado8">Inductor de núcleo toroidal:</marcador> En este diseño, el alambre se enrolla alrededor de un núcleo toroidal, que tiene una forma de anillo. Los inductores de núcleo toroidal ofrecen una alta inductancia y baja radiación electromagnética, lo que los hace adecuados para aplicaciones de filtrado y acoplamiento en sistemas de audio y radiofrecuencia.</li>
+                    <li><marcador class="resaltado8">Inductor variable:</marcador> También conocido como bobina ajustable, es un inductor cuya inductancia se puede cambiar variando el número de vueltas de la bobina o mediante un núcleo móvil que ajusta la permeabilidad magnética. Se utilizan en aplicaciones donde se requiere ajuste o sintonización de la inductancia, como en radios y antenas.</li>
+                    <li><marcador class="resaltado8">Inductor de película:</marcador> Estos inductores están fabricados utilizando tecnología de película delgada y se utilizan en aplicaciones de alta frecuencia, como en circuitos integrados y dispositivos de microondas.</li>
+                    <li><marcador class="resaltado8">Inductor multicapa (MLI):</marcador> Es un tipo de inductor que se fabrica utilizando tecnología de circuitos impresos y se integra directamente en placas de circuito impreso. Son comunes en aplicaciones de alta frecuencia y donde el espacio es un factor crítico.</li>
+                    <li><marcador class="resaltado8">Inductor de potencia:</marcador> Estos inductores están diseñados para manejar corrientes elevadas y se utilizan en aplicaciones de alta potencia, como fuentes de alimentación, convertidores y motores.</li>
+                </ul>
                 <h2>Cálculo</h2>
                 <p>Calcular el valor de un inductor (inductancia) es esencial para diseñar y seleccionar componentes adecuados para diferentes aplicaciones electrónicas. La inductancia de un inductor depende de varios factores, incluyendo el número de vueltas en la bobina, el área de la sección transversal, el material del núcleo y la permeabilidad magnética del núcleo, entre otros. Para calcular la inductancia de un inductor, se usan los siguientes métodos:</p>
-                <p>La inductancia (L) de un solenoide (bobina) en el aire se puede calcular utilizando la siguiente fórmula aproximada:</p>
+                <p><marcador class="resaltado8">Inductancia (L):</marcador> La inductancia de un solenoide (bobina) en el aire se puede calcular utilizando la siguiente fórmula aproximada:</p>
                 <br>
                 <center>
                     <p>L ≈ (μ₀ * N² * A) / l</p>
@@ -65,47 +100,14 @@
                     <p>     A = Área de la sección transversal de la bobina en metros cuadrados (m²)</p>
                     <p>     d = diametro de la sección transversal</p>
                     <p>     l = Longitud de la bobina en metros (m)</p>
-                </center>    
-                <p>Ejemplo de cálculo de inductancia: Encuentre la inductancia de una bobina de núcleo de aire con un diametro de la sección transversal de 4 mm, 100 vueltas y una longitud de 100 mm.</p>
+                </center>
+                <br>    
+                <h5>Ejemplo de cálculo de inductancia:</h5>
+                <p>Encuentre la inductancia de una bobina de núcleo de aire con un diametro de la sección transversal de 4 mm, 100 vueltas y una longitud de 100 mm.</p>
                 <p>A = &#960;(2x10<sup>-3</sup>)<sup>2</sup> = 12.57x10<sup>-6</sup></p>
                 <p>L = \( \frac{N^{2} \mu A}{l} \)</p>
                 <p>L = \( \frac {(100)^{2}(4x10^{-7})(12.57x10^{-6})}{0.1} \)</p>
-                <p>L = 1.58x10<sup>-6</sup></p>
-                <br>
-                <h2>Características</h2>
-                <ul style="list-style-type: circle;">
-                    <li>Fórmula para inductancia de un inductor con núcleo de hierro o ferrita: Si el inductor tiene un núcleo de material ferromagnético (como hierro o ferrita), la fórmula para calcular la inductancia es más compleja y depende de la geometría del núcleo. En este caso, se utilizan ecuaciones específicas y tablas de datos proporcionados por los fabricantes de inductores o herramientas de diseño de inductores disponibles en línea.</li>
-                    <li>Simulación y software de diseño: Para inductores más complejos con núcleos específicos o diseños personalizados, a menudo es necesario recurrir a simulaciones con software de diseño de inductores. Estas herramientas de software pueden proporcionar resultados más precisos y tener en cuenta factores como la reluctancia del núcleo, la saturación magnética y otros efectos no lineales.</li>
-                    <li>Valores estándar: En la práctica, los inductores comerciales están disponibles en valores estándar de inductancia, y es posible seleccionar uno que se ajuste a las necesidades del diseño sin necesidad de calcularlo desde cero.</li>
-                </ul>
-                <div class="blog-image-doble">
-                    <img src="media/inductor5.jpg" alt="">
-                    <img src="media/inductor6.jpg" alt="">
-                </div>
-                <h2>Aplicaciones</h2>
-                <p>Los inductores tienen una amplia gama de aplicaciones en la electrónica y otras áreas de la tecnología. Algunos usos comunes incluyen:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Filtrado: Se utilizan en circuitos de filtrado para bloquear o atenuar ciertas frecuencias y permitir el paso de otras.</li>
-                    <li>Transformadores: Los inductores con núcleo de hierro o ferrita se utilizan en transformadores para cambiar la tensión de una señal de corriente alterna.</li>
-                    <li>Almacenamiento de Energía: Los inductores se utilizan en aplicaciones de almacenamiento de energía, como en convertidores de potencia y sistemas de energía renovable.</li>
-                    <li>Cancelación de Ruido: Los inductores se emplean en circuitos de cancelación de ruido, especialmente en aplicaciones de audio y comunicaciones.</li>
-                    <li>Antenas: En la transmisión de señales inalámbricas, los inductores se utilizan en antenas para sintonizar la frecuencia de transmisión.</li>
-                </ul>
-                <div class="blog-image-grande">
-                    <img src="media/inductor3.jpg" alt="">
-                </div>
-                <h2>Tipos de inductores</h2>
-                <p>Los inductores pueden clasificarse en diferentes tipos según su diseño, construcción y aplicaciones específicas. Aquí están algunos de los tipos más comunes de inductores:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Inductor de bobina o solenoide: Es el tipo más básico y común de inductor. Consiste en un alambre enrollado alrededor de un núcleo, generalmente de aire. Se utiliza ampliamente en aplicaciones como filtros, acoplamientos y almacenamiento de energía.</li>
-                    <li>Inductor de núcleo de hierro: En este tipo de inductor, el alambre está enrollado alrededor de un núcleo de hierro. Los inductores de núcleo de hierro ofrecen una mayor inductancia en comparación con los de núcleo de aire, y se utilizan en aplicaciones que requieren una mayor potencia y eficiencia, como transformadores y bobinas de choque.</li>
-                    <li>Inductor de núcleo de ferrita: Este inductor utiliza un núcleo hecho de material ferromagnético llamado ferrita. Los inductores de núcleo de ferrita se utilizan en aplicaciones de alta frecuencia debido a sus excelentes propiedades magnéticas a altas frecuencias. Son comunes en transformadores de alta frecuencia, fuentes de alimentación conmutadas y dispositivos de radiofrecuencia.</li>
-                    <li>Inductor de núcleo toroidal: En este diseño, el alambre se enrolla alrededor de un núcleo toroidal, que tiene una forma de anillo. Los inductores de núcleo toroidal ofrecen una alta inductancia y baja radiación electromagnética, lo que los hace adecuados para aplicaciones de filtrado y acoplamiento en sistemas de audio y radiofrecuencia.</li>
-                    <li>Inductor variable: También conocido como bobina ajustable, es un inductor cuya inductancia se puede cambiar variando el número de vueltas de la bobina o mediante un núcleo móvil que ajusta la permeabilidad magnética. Se utilizan en aplicaciones donde se requiere ajuste o sintonización de la inductancia, como en radios y antenas.</li>
-                    <li>Inductor de película: Estos inductores están fabricados utilizando tecnología de película delgada y se utilizan en aplicaciones de alta frecuencia, como en circuitos integrados y dispositivos de microondas.</li>
-                    <li>Inductor multicapa (MLI): Es un tipo de inductor que se fabrica utilizando tecnología de circuitos impresos y se integra directamente en placas de circuito impreso. Son comunes en aplicaciones de alta frecuencia y donde el espacio es un factor crítico.</li>
-                    <li>Inductor de potencia: Estos inductores están diseñados para manejar corrientes elevadas y se utilizan en aplicaciones de alta potencia, como fuentes de alimentación, convertidores y motores.</li>
-                </ul>
+                <p><marcador class="resaltado7">L = 1.58x10<sup>-6</sup></marcador></p>
                 <br>
                 <br>
             </div>   
