--- a/electronica/resistencia.html
+++ b/electronica/resistencia.html
@@ -45,10 +45,10 @@
                 </div>
                 <h2>Conductores</h2>
                 <p>Los conductores eléctricos más comunes son:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Metales: Los metales, como el cobre, la plata, el oro, el aluminio y el hierro, son excelentes conductores eléctricos debido a su estructura cristalina y a la disponibilidad de electrones libres en su banda de conducción. El cobre es especialmente utilizado en la mayoría de las aplicaciones eléctricas debido a su alta conductividad y relativamente bajo costo.</li>
-                    <li>Semiconductores: Los semiconductores varían su resistencia en base a la luz, la temperatura, el dopaje o impurezas, el campo eléctrico o magnético y la tensión aplicada. Aunque los semiconductores tienen una resistencia mayor que los conductores, ciertos semiconductores, como el grafeno, pueden presentar una baja resistencia eléctrica en determinadas condiciones y configuraciones.</li>
-                    <li>Los superconductores son materiales que, cuando se enfrían por debajo de una cierta temperatura crítica, exhiben una propiedad única: la resistencia eléctrica desaparece por completo. Esto significa que pueden transportar corriente eléctrica sin pérdidas de energía, lo que los convierte en conductores ideales en ciertas aplicaciones.</li>
+                <ul>
+                    <li><marcador class="resaltado8">Metales:</marcador> Los metales, como el cobre, la plata, el oro, el aluminio y el hierro, son excelentes conductores eléctricos debido a su estructura cristalina y a la disponibilidad de electrones libres en su banda de conducción. El cobre es especialmente utilizado en la mayoría de las aplicaciones eléctricas debido a su alta conductividad y relativamente bajo costo.</li>
+                    <li><marcador class="resaltado8">Semiconductores:</marcador> Los semiconductores varían su resistencia en base a la luz, la temperatura, el dopaje o impurezas, el campo eléctrico o magnético y la tensión aplicada. Aunque los semiconductores tienen una resistencia mayor que los conductores, ciertos semiconductores, como el grafeno, pueden presentar una baja resistencia eléctrica en determinadas condiciones y configuraciones.</li>
+                    <li><marcador class="resaltado8">Superconductores:</marcador> Los superconductores son materiales que, cuando se enfrían por debajo de una cierta temperatura crítica, exhiben una propiedad única: la resistencia eléctrica desaparece por completo. Esto significa que pueden transportar corriente eléctrica sin pérdidas de energía, lo que los convierte en conductores ideales en ciertas aplicaciones.</li>
                 </ul>
                 <p>La contraparte de los conductores sería los dieléctricos, que tienen la función de aislar la corriente eléctrica, como sería el caso del vidrio, la madera o el plástico.</p>
                 <div class="blog-image-doble">
@@ -62,16 +62,16 @@
                 </div>
                 <h2>Tipos de resistencia</h2>
                 <p>Existen otros tipos de resistencias, tales como:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Resistencias fijas: Son resistencias con un valor de resistencia predeterminado que no se puede ajustar. Vienen en diferentes valores de resistencia y potencias para adaptarse a diversas aplicaciones.</li>
-                    <li>Resistencias variables o potenciómetros: Son resistencias que permiten ajustar su valor de resistencia manualmente. Los potenciómetros se utilizan en circuitos donde se requiere un ajuste manual, como en controles de volumen o brillo.</p>
-                    <li>Resistencias de película de carbono: Estas resistencias tienen una película de carbono aplicada a un sustrato cerámico. Son comunes y se utilizan en una amplia variedad de aplicaciones.</li>
-                    <li>Resistencias de película metálica: Estas resistencias utilizan una fina película metálica, como níquel o cromo, sobre un sustrato cerámico. Son conocidas por tener una mayor estabilidad térmica y una mayor precisión en comparación con las resistencias de película de carbono.</li>
-                    <li>Resistencias de alambre bobinado: Estas resistencias están hechas de un alambre resistivo bobinado en forma de espiral alrededor de un núcleo. Se utilizan en aplicaciones que requieren una alta potencia y precisión.</li>
-                    <li>Resistencias de montaje superficial (SMD): Son resistencias diseñadas para montarse directamente en la superficie de una placa de circuito impreso (PCB). Son pequeñas y se utilizan en dispositivos electrónicos de alta densidad.</li>
-                    <li>Termistores: Son resistencias cuyo valor cambia significativamente con la temperatura. Se utilizan en aplicaciones de control de temperatura, protección contra sobrecalentamiento, etc.</li>
-                    <li>LDR (Light Dependent Resistors) o fotoreceptores: Son dispositivos electrónicos que presentan una resistencia que varía en respuesta a la intensidad de la luz que incide sobre ellos. Estas resistencias son sensibles a la luz y se utilizan en una variedad de aplicaciones donde se necesita detectar cambios en la iluminación ambiental.</li>
-                    <li>Varistores: Aunque no son resistencias en el sentido tradicional, los varistores son dispositivos que presentan una resistencia variable según la tensión aplicada. Se utilizan para proteger equipos electrónicos contra sobretensiones y picos de voltaje.</li>
+                <ul >
+                    <li><marcador class="resaltado8">Resistencias fijas:</marcador> Son resistencias con un valor de resistencia predeterminado que no se puede ajustar. Vienen en diferentes valores de resistencia y potencias para adaptarse a diversas aplicaciones.</li>
+                    <li><marcador class="resaltado8">Resistencias variables o potenciómetros:</marcador> Son resistencias que permiten ajustar su valor de resistencia manualmente. Los potenciómetros se utilizan en circuitos donde se requiere un ajuste manual, como en controles de volumen o brillo.</p>
+                    <li><marcador class="resaltado8">Resistencias de película de carbono:</marcador> Estas resistencias tienen una película de carbono aplicada a un sustrato cerámico. Son comunes y se utilizan en una amplia variedad de aplicaciones.</li>
+                    <li><marcador class="resaltado8">Resistencias de película metálica:</marcador> Estas resistencias utilizan una fina película metálica, como níquel o cromo, sobre un sustrato cerámico. Son conocidas por tener una mayor estabilidad térmica y una mayor precisión en comparación con las resistencias de película de carbono.</li>
+                    <li><marcador class="resaltado8">Resistencias de alambre bobinado:</marcador> Estas resistencias están hechas de un alambre resistivo bobinado en forma de espiral alrededor de un núcleo. Se utilizan en aplicaciones que requieren una alta potencia y precisión.</li>
+                    <li><marcador class="resaltado8">Resistencias de montaje superficial (SMD):</marcador> Son resistencias diseñadas para montarse directamente en la superficie de una placa de circuito impreso (PCB). Son pequeñas y se utilizan en dispositivos electrónicos de alta densidad.</li>
+                    <li><marcador class="resaltado8">Termistores:</marcador> Son resistencias cuyo valor cambia significativamente con la temperatura. Se utilizan en aplicaciones de control de temperatura, protección contra sobrecalentamiento, etc.</li>
+                    <li><marcador class="resaltado8">LDR (Light Dependent Resistors) o fotoreceptores:</marcador> Son dispositivos electrónicos que presentan una resistencia que varía en respuesta a la intensidad de la luz que incide sobre ellos. Estas resistencias son sensibles a la luz y se utilizan en una variedad de aplicaciones donde se necesita detectar cambios en la iluminación ambiental.</li>
+                    <li><marcador class="resaltado8">Varistores:</marcador> Aunque no son resistencias en el sentido tradicional, los varistores son dispositivos que presentan una resistencia variable según la tensión aplicada. Se utilizan para proteger equipos electrónicos contra sobretensiones y picos de voltaje.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/resistencia6.png" alt="">
@@ -88,7 +88,7 @@
                     <p>     R es la resistencia en ohmios (Ω).</p>
                 </center>
                 <br>
-                <p>En palabras sencillas, la Ley de Ohm nos dice que si aumentamos la tensión aplicada a un conductor, aumentará la corriente que fluye a través de él, siempre que la resistencia se mantenga constante. Del mismo modo, si disminuimos la resistencia en un circuito, la corriente aumentará para una tensión dada.</p>
+                <p>En simples palabras, la Ley de Ohm nos dice que si aumentamos la tensión aplicada a un conductor, aumentará la corriente que fluye a través de él, siempre que la resistencia se mantenga constante. Del mismo modo, si disminuimos la resistencia en un circuito, la corriente aumentará para una tensión dada.</p>
                 <p>La Ley de Ohm es fundamental para el análisis y diseño de circuitos eléctricos. Permite calcular y predecir cómo diferentes componentes eléctricos interactúan entre sí y cómo se comportan en diversas configuraciones. También es esencial para comprender cómo funcionan dispositivos y sistemas eléctricos, así como para garantizar que se cumplan los requisitos de diseño y seguridad en diversas aplicaciones.</p>
                 <br>
                 <br>
